k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webrtc-signaling-service
  labels:
    app: webrtc-signaling-server
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: webrtc-signaling-server
